// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawMinions() should return 1 minion 1`] = `
Array [
  Object {
    "id": "card6",
    "type": "Minion",
  },
]
`;

exports[`drawMinions() should return 3 minions 1`] = `
Array [
  Object {
    "id": "card6",
    "type": "Minion",
  },
  Object {
    "id": "card1",
    "type": "Minion",
  },
  Object {
    "id": "card5",
    "type": "Minion",
  },
]
`;
